# lsystems

./: .gitignore  CMakeLists.txt  LICENSE  README.md  a.out  run-build.sh  run-tests.sh
include/: geom.hpp  rewrite.hpp
src/: geom.cpp  main.cpp  rewrite.cpp
test/: rewrite_test.cpp
